--- a/website/GAN CNN.ipynb
+++ b/website/GAN CNN.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DIRECTORY = r'C:\\Users\\Prathamesh\\Desktop\\Company Tasks\\Projects Assigned to me\\GAN NEW/'\n",
+    "DIRECTORY = r'C:\\Users\\Kaustubhg\\Desktop\\Projects'\n",
     "\n",
     "CATEGORIES = ['GAN', 'Nongan']"
    ]
@@ -308,7 +308,7 @@
    "source": [
     "from os import listdir\n",
     "from os.path import isfile, join\n",
-    "predict_dir_path=r'C:\\Users\\Prathamesh\\Desktop\\Company Tasks\\Projects Assigned to me\\GAN NEW\\test/'\n",
+    "predict_dir_path=r'C:\\Users\\Kaustubhg\\Desktop\\Projects'\n",
     "onlyfiles = [f for f in listdir(predict_dir_path) if isfile(join(predict_dir_path, f))]\n",
     "print(onlyfiles)"
    ]
@@ -361,10 +361,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\Prathamesh\\.conda\\envs\\Project\\lib\\site-packages\\tensorflow\\python\\training\\tracking\\tracking.py:111: Model.state_updates (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From C:\\Users\\Kaustubhg\\.conda\\envs\\Project\\lib\\site-packages\\tensorflow\\python\\training\\tracking\\tracking.py:111: Model.state_updates (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "This property should not be used in TensorFlow 2.0, as updates are applied automatically.\n",
-      "WARNING:tensorflow:From C:\\Users\\Prathamesh\\.conda\\envs\\Project\\lib\\site-packages\\tensorflow\\python\\training\\tracking\\tracking.py:111: Layer.updates (from tensorflow.python.keras.engine.base_layer) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From C:\\Users\\Kaustubhg\\.conda\\envs\\Project\\lib\\site-packages\\tensorflow\\python\\training\\tracking\\tracking.py:111: Layer.updates (from tensorflow.python.keras.engine.base_layer) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "This property should not be used in TensorFlow 2.0, as updates are applied automatically.\n",
       "INFO:tensorflow:Assets written to: new_model.hp5\\assets\n"
